# rust-discord-bot

./: Cargo.toml  Dockerfile  manifest.yml
root/: Cargo.toml
src/: main.rs  youtube.rs
src/commands/: deafen.rs  join.rs  leave.rs  mod.rs  mute.rs  ping.rs  play.rs  undeafen.rs  unmute.rs
src/src/: main.rs
