[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Trey Hecht <hechtta@protonmail.com>"]
edition = "2018"

[dependencies.serenity]
version = "0.7.1"
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "rustls_backend",
    "utils",
    "cache",
    "voice"
]
[dependencies]
reqwest = "0.9.22"
serde_json = "1.0.41"
serde = "1.0.101"